Prevent floating elements from covering the recaptcha badge

--- a/src/Frontend/Themes/Fork/Core/Layout/Sass/components/_forms.scss
+++ b/src/Frontend/Themes/Fork/Core/Layout/Sass/components/_forms.scss
@@ -10,3 +10,7 @@
 .alert-danger {
   color: $white !important;
 }
+
+.grecaptcha-badge {
+  z-index: 9000;
+}
